updated coding page with RPS game

--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css" />
     <title class="site-title"></title>
-</head>
+  </head>
 
-<body>
-    <nav>
+  <body>
+    <div class="wrapper">
+      <nav>
         <div class="logo">
-            <h4 class="title"></h4>
-            <h5 class="subtitle"></h5>
+          <h4 class="title"></h4>
+          <h5 class="subtitle"></h5>
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="/writing.html">WRITING</a></li>
-            <li><a href="/podcasting.html">PODCASTING</a></li>
-            <li><a href="/music.html">MUSIC</a></li>
-            <li><a href="https://github.com/pravda23" target="_blank">CODING</a></li>
-            <li><a href="/contact.html">CONTACT</a></li>
+          <li><a href="/">HOME</a></li>
+          <li><a href="/writing">WRITING</a></li>
+          <li><a href="/podcasting">PODCASTING</a></li>
+          <li><a href="/music">MUSIC</a></li>
+          <li>
+            <a href="https://github.com/pravda23" target="_blank">CODING</a>
+          </li>
+          <li><a href="/contact">CONTACT</a></li>
         </ul>
         <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
         </div>
-    </nav>
-    <main>
+      </nav>
+      <main>
         <div class="main">
-            <h1>Contact</h1><br>
-            <h3>I like meeting new people.</h3><br>
-            <ul>
+          <h1>Contact</h1>
+          <br />
+          <h3>I like meeting new people.</h3>
+          <br />
+          <ul>
+            <li>
+              <strong>email </strong>
+              <a
+                href="mailto:music@johnbartmann.com"
+                target="_blank"
+                rel="noopener"
+                >music@johnbartmann.com</a
+              >
+            </li>
+            <br />
 
-                <li><strong>email </strong> <a href="mailto:music@johnbartmann.com" target="_blank" rel="noopener">music@johnbartmann.com</a></li><br>
+            <li>
+              <strong>discord </strong
+              ><a
+                href="https://discord.com/users/461833114747011072"
+                target="_blank"
+                rel="noopener"
+                >johnb#1341</a
+              >
+            </li>
+            <br />
 
-                <li> <strong>discord </strong><a href="https://discord.com/users/461833114747011072" target="_blank" rel="noopener">johnb#1341</a></li><br>
-
-                <li><strong>twitter </strong><a href="https://twitter.com/johnisthemusic/" target="_blank" rel="noopener">@johnisthemusic</a></li><br>
-
-            </ul>
-
+            <li>
+              <strong>twitter </strong
+              ><a
+                href="https://twitter.com/johnisthemusic/"
+                target="_blank"
+                rel="noopener"
+                >@johnisthemusic</a
+              >
+            </li>
+            <br />
+          </ul>
         </div>
-    </main>
-    <script src="app.js"></script>
-</body>
-
+      </main>
+      <script src="app.js"></script>
+    </div>
+  </body>
 </html>
