--- a/music.html
+++ b/music.html
@@ -1,67 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css" />
     <title class="site-title"></title>
-</head>
+  </head>
 
-<body>
-    <nav>
+  <body>
+    <div class="wrapper">
+      <nav>
         <div class="logo">
-            <h4 class="title"></h4>
-            <h5 class="subtitle"></h5>
+          <h4 class="title"></h4>
+          <h5 class="subtitle"></h5>
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="/writing.html">WRITING</a></li>
-            <li><a href="/podcasting.html">PODCASTING</a></li>
-            <li><a href="/music.html">MUSIC</a></li>
-            <li><a href="https://github.com/pravda23" target="_blank">CODING</a></li>
-            <li><a href="/contact.html">CONTACT</a></li>
+          <li><a href="/">HOME</a></li>
+          <li><a href="/writing">WRITING</a></li>
+          <li><a href="/podcasting">PODCASTING</a></li>
+          <li><a href="/music">MUSIC</a></li>
+          <li>
+            <a href="https://github.com/pravda23" target="_blank">CODING</a>
+          </li>
+          <li><a href="/contact">CONTACT</a></li>
         </ul>
         <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
         </div>
-    </nav>
-    <main>
+      </nav>
+      <main>
         <div class="main">
-            <h1>Music</h1><br>
-            <h3>I'm working real hard on bringing you a fancy web app for my music. Until then, here's where you can check out 300+ songs & sketches.</h3><br>
-            <h3>Creative Commons soundtracks & comedic themes</h3><br>
-            <ul>
+          <h1>Music</h1>
+          <br />
+          <h3>
+            I'm working real hard on bringing you a fancy web app for my music.
+            Until then, here's where you can check out 300+ songs & sketches.
+          </h3>
+          <br />
+          <h3>Creative Commons soundtracks & comedic themes</h3>
+          <br />
+          <ul>
+            <li>
+              <a href="https://youtube.com/c/johnbartmannmusic" target="_blank"
+                >YouTube</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://open.spotify.com/artist/3ZkQ69zxOePFLOGLj0N15C"
+                target="_blank"
+                >Spotify</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://music.apple.com/us/artist/john-bartmann/1081298778"
+                target="_blank"
+                >Apple Music</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://music.amazon.com/artists/B071YYY529/john-bartmann"
+                target="_blank"
+                >Amazon Music</a
+              >
+            </li>
+            <li>
+              <a href="https://johnbartmann.bandcamp.com" target="_blank"
+                >Bandcamp</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://freemusicarchive.org/music/John_Bartmann/"
+                target="_blank"
+                >Free Music Archive</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://soundcloud.com/johnbartmannmusic/"
+                target="_blank"
+                >Soundcloud</a
+              >
+            </li>
+          </ul>
+          <br /><a
+            href="https://docs.google.com/spreadsheets/d/1lSEnqwGfV7shU5GsO8Cf6FSbFAf73gCFOlyzhbLuamo/edit#gid=1537321504"
+            target="_blank"
+            >Music library metadata</a
+          ><br /><br />
+          <h3>Other music projects</h3>
+          <br />
+          <ul>
+            <li>
+              <a href="https://pravdaofficial.com" target="_blank"
+                >Pravda - songwriting and production</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://dnamusik.sourceaudio.com/album/3646849."
+                target="_blank"
+                >DNA Muzik (Munich) - library music</a
+              >
+            </li>
+            <li>
+              <a href="https://thegreatgatsbys.com" target="_blank"
+                >The Great Gatsbys - cheesy wedding band</a
+              >
+            </li>
+          </ul>
 
-                <li><a href="https://youtube.com/c/johnbartmannmusic" target="_blank">YouTube</a></li>
-                <li><a href="https://open.spotify.com/artist/3ZkQ69zxOePFLOGLj0N15C" target="_blank">Spotify</a> </li>
-                <li><a href="https://music.apple.com/us/artist/john-bartmann/1081298778" target="_blank">Apple Music</a></li>
-                <li><a href="https://music.amazon.com/artists/B071YYY529/john-bartmann" target="_blank">Amazon Music</a></li>
-                <li><a href="https://johnbartmann.bandcamp.com" target="_blank">Bandcamp</a></li>
-                <li><a href="https://freemusicarchive.org/music/John_Bartmann/" target="_blank">Free Music Archive</a></li>
-                <li><a href="https://soundcloud.com/johnbartmannmusic/" target="_blank">Soundcloud</a></li>
-            </ul>
-            <br><a href="https://docs.google.com/spreadsheets/d/1lSEnqwGfV7shU5GsO8Cf6FSbFAf73gCFOlyzhbLuamo/edit#gid=1537321504" target="_blank">Music library metadata</a><br><br>
-            <h3>Other music projects</h3><br>
-            <ul>
-                <li><a href="https://pravdaofficial.com" target="_blank">Pravda - songwriting and production</a></li>
-                <li><a href="https://dnamusik.sourceaudio.com/album/3646849." target="_blank">DNA Muzik (Munich) - library music</a></li>
-                <li><a href="https://thegreatgatsbys.com" target="_blank">The Great Gatsbys - cheesy wedding band</a></li>
-            </ul>
-
-
-            <!-- <table id="myTable"></table> -->
-
+          <!-- <table id="myTable"></table> -->
         </div>
-    </main>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="app.js"></script>
-</body>
-
+      </main>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+      <script
+        type="text/javascript"
+        src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"
+      ></script>
+      <script src="app.js"></script>
+    </div>
+  </body>
 </html>
