--- a/podcasting.html
+++ b/podcasting.html
@@ -12,18 +12,19 @@
 </head>
 
 <body>
+    <div class="wrapper">
     <nav>
         <div class="logo">
             <h4 class="title"></h4>
             <h5 class="subtitle"></h5>
         </div>
         <ul class="nav-links">
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="/writing.html">WRITING</a></li>
-            <li><a href="/podcasting.html">PODCASTING</a></li>
-            <li><a href="/music.html">MUSIC</a></li>
+            <li><a href="/">HOME</a></li>
+            <li><a href="/writing">WRITING</a></li>
+            <li><a href="/podcasting">PODCASTING</a></li>
+            <li><a href="/music">MUSIC</a></li>
             <li><a href="https://github.com/pravda23" target="_blank">CODING</a></li>
-            <li><a href="/contact.html">CONTACT</a></li>
+            <li><a href="/contact">CONTACT</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -76,6 +77,7 @@
         </div>
     </main>
     <script src="app.js"></script>
+</div>
 </body>
 
 </html>
