mobile side nav loading json links

--- a/coding.html
+++ b/coding.html
@@ -28,9 +28,7 @@
           <li><a href="/writing">WRITING</a></li>
           <li><a href="/podcasting">PODCASTING</a></li>
           <li><a href="/music">MUSIC</a></li>
-          <li>
-            <a href="https://github.com/pravda23" target="_blank">CODING</a>
-          </li>
+          <li><a href="/coding">CODING</a></li>
           <li><a href="/contact">CONTACT</a></li>
         </ul>
         <div class="burger">
@@ -44,7 +42,7 @@
 
       <main>
         <div class="main">
-        <h1>Web developement</h1><br>
+        <h1>Web development</h1><br>
         <div>I do front-end development with HTML, CSS and Javascript. Check out some of my work on <a href="https://github.com/pravda23/" target="_blank">Github</a>. Or play my version of Rock Paper Scissors.</div><br>
         <div class="rps-main">
           <div class="outer">
