--- a/podcasting.html
+++ b/podcasting.html
@@ -23,7 +23,7 @@
             <li><a href="/writing">WRITING</a></li>
             <li><a href="/podcasting">PODCASTING</a></li>
             <li><a href="/music">MUSIC</a></li>
-            <li><a href="https://github.com/pravda23" target="_blank">CODING</a></li>
+            <li><a href="/coding">CODING</a></li>
             <li><a href="/contact">CONTACT</a></li>
         </ul>
         <div class="burger">
