--- a/music.html
+++ b/music.html
@@ -22,14 +22,7 @@
           <h4 class="title"></h4>
           <h5 class="subtitle"></h5>
         </div>
-        <ul class="nav-links">
-          <li><a href="/">HOME</a></li>
-          <li><a href="/writing">WRITING</a></li>
-          <li><a href="/podcasting">PODCASTING</a></li>
-          <li><a href="/music">MUSIC</a></li>
-          <li><a href="/coding">CODING</a></li>
-          <li><a href="/contact">CONTACT</a></li>
-        </ul>
+        <ul class="nav-links"></ul>
         <div class="burger">
           <div class="line1"></div>
           <div class="line2"></div>
